--- a/dcipipeline/agents/openshift-edge/agent.yml
+++ b/dcipipeline/agents/openshift-edge/agent.yml
@@ -101,7 +101,7 @@
     - name: validate extravars
       assert:
         that:
-          - answer == "42"
+          - answer | int == 42
 
 - name: Running ocp deployment
   hosts: runner
