dci-pipeline-lint

--- a/tox.ini
+++ b/tox.ini
@@ -24,7 +24,7 @@ commands =
          dci-queue schedule mypool echo @RESOURCE
          dci-queue run mypool
          dci-queue remove-pool mypool
-         pytest -v tests/e2e
+         python -m pytest -v tests/e2e
          dci-rebuild-pipeline
          # be sure to have 2 identical pipelines before calling dci-diff-pipeline
          dci-pipeline
@@ -56,7 +56,7 @@ allowlist_externals =
 
 [testenv:unit]
 commands =
-  pytest -v {posargs:dcipipeline dciqueue dciagent}
+  python -m pytest -v {posargs:dcipipeline dciqueue dciagent dcipipelinelint}
 setenv =
     DCI_VAULT_CLIENT = {toxinidir}/.tox/unit/bin/dci-vault-client
     DCI_API_SECRET = fakesecret
