use gitleaks in pre-commit
Gitleaks-Sign: dmVyc2lvbiBpcyBzZXQgYnkgYnVpbGQgcHJvY2Vzc3wyMDI2LTAxLTI2VDE3OjUwOjMz
Gitleaks-Hash: 5b79e5b64a2b3f85deda38c58e93e9fe58378635

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,4 +35,12 @@ repos:
       - id: pymarkdown
         args: ["-d", "md014,md013", "scan"]
 
+  - repo: local
+    hooks:
+      - id: gitleaks-with-signature
+        name: Gitleaks secret detection with signature
+        entry: .pre-commit-hooks/gitleaks-with-signature.sh
+        language: script
+        pass_filenames: false
+
 ...
