Show what to change in black linter
Gitleaks-Sign: OC4zMC4wfDIwMjYtMDItMThUMTM6NTQ6Mzc=
Gitleaks-Hash: 74a2c498f13017cf7c15dda9c31dab8eaaada0e7

--- a/tox.ini
+++ b/tox.ini
@@ -48,7 +48,7 @@ deps = flake8
        flake8-colors
        black
 commands =
-  black --check .
+  black --check --diff .
   flake8
 allowlist_externals =
   black
