add the dci-install-git-hooks cmd
Gitleaks-Sign: dmVyc2lvbiBpcyBzZXQgYnkgYnVpbGQgcHJvY2Vzc3wyMDI2LTAyLTE5VDA3OjIwOjI4
Gitleaks-Hash: 74ec052f973dca80622e3ef5a3ac5df0a4f80247

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -19,4 +19,5 @@ include dciqueue/dci-queue.bash_completion
 include requirements.txt
 include sysconfig/*
 include systemd/*
+include hooks/*
 include tools/*
